--- a/lib/ng-vcl/src/jss-form/jss-form.component.html
+++ b/lib/ng-vcl/src/jss-form/jss-form.component.html
@@ -1,93 +1,5 @@
-<form vclForm novalidate [formGroup]="formGroup" (ngSubmit)="onSubmit()" >
-
-  <ng-container *ngFor="let fm of rootModel.models">
-    <vcl-form-control-group>
-      <ng-container [ngSwitch]="fm.formControl">
-          <!-- input -->
-        <ng-container *ngSwitchCase="'input'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <input vclInput [formControlName]="fm.key" [placeholder]="fm.placeholder">
-        </ng-container>
-          <!-- number -->
-        <ng-container *ngSwitchCase="'number'">
-            <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-            <input vclInput type="number" [formControlName]="fm.key" [placeholder]="fm.placeholder">
-          </ng-container>
-        <!-- textarea -->
-        <ng-container *ngSwitchCase="'textarea'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <textarea vclInput [formControlName]="fm.key" [placeholder]="fm.placeholder" [autogrow]="true" [minRows]="fm.minRows || 3" [maxRows]="fm.minRows || 10"></textarea>
-        </ng-container>
-        <!-- switch -->
-        <ng-container *ngSwitchCase="'switch'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <vcl-flip-switch [formControlName]="fm.key"></vcl-flip-switch>
-        </ng-container>
-        <!-- slider -->
-        <ng-container *ngSwitchCase="'slider'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <vcl-slider [formControlName]="fm.key" [min]="fm.min" [max]="fm.max" [scale]="fm.scale" [lock]="fm.lock"></vcl-slider>
-        </ng-container>
-        <!-- radio -->
-        <ng-container *ngSwitchCase="'radio-group'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <vcl-radio-group [formControlName]="fm.key">
-            <label vclRadioButtonLabel *ngFor="let option of fm.options">
-              <vcl-radio-button [value]="option.label"></vcl-radio-button>
-              <vcl-icon vclAppend >{{option.label}}</vcl-icon>
-            </label>
-          </vcl-radio-group>
-        </ng-container>
-        <!--  button-group -->
-        <ng-container *ngSwitchCase="'buttons'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <div class="vclLooseButtonGroup">
-            <button vcl-button *ngFor="let button of fm.buttons" [type]="button.formControl" (click)="onAction(button.action)">{{button.label}}</button>
-          </div>
-        </ng-container>
-        <!--  button-group -->
-        <ng-container *ngSwitchCase="'button-group'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <vcl-button-group>
-            <button vcl-button *ngFor="let option of fm.options" [type]="option.formControl" [value]="option.value">{{option.label}}</button>
-          </vcl-button-group>
-        </ng-container>
-        <!--  button -->
-        <ng-container *ngSwitchCase="'button'">
-          <button vcl-button [type]="fm.formControl" (click)="onAction(fm.action)" >{{fm.label}}</button>
-        </ng-container>
-        <!--  checkbox -->
-        <ng-container *ngSwitchCase="'checkbox'">
-          <label vclCheckboxLabel>
-            <vcl-checkbox [formControlName]="fm.key"></vcl-checkbox>
-            {{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required>
-          </label>
-        </ng-container>
-        <!--  select -->
-        <ng-container *ngSwitchCase="'select'">
-          <label *ngIf="!!fm.label" vclFormControlLabel>{{fm.label}}<vcl-required *ngIf="fm.required"></vcl-required></label>
-          <vcl-select [placeholder]="fm.placeholder">
-            <vcl-select-list [formControlName]="fm.key" [selectionMode]="fm.selectionMode">
-              <vcl-select-list-item *ngFor="let option of fm.options" [value]="option.value">
-                <vcl-select-list-label>{{option.label}}</vcl-select-list-label>
-                <vcl-select-list-sublabel>{{option.sublabel}}</vcl-select-list-sublabel>
-              </vcl-select-list-item>
-            </vcl-select-list>
-          </vcl-select>
-        </ng-container>
-        <!--  file-input -->
-        <ng-container *ngSwitchCase="'file-input'">
-          <label vclFormControlLabel>{{fm.label}}</label>
-          <vcl-file-input [multiple]="fm.multiple" [formControlName]="fm.key">{{fm.placeholder}}</vcl-file-input>
-      </ng-container>
-      </ng-container>
-      <!--  hint -->
-      <ng-container *ngFor="let hint of fm.hints">
-        <vcl-hint *ngIf="hint.type === 'default'" > {{ hint.message }}</vcl-hint>
-        <vcl-hint-warning *ngIf="hint.type === 'warning'" > {{ hint.message }}</vcl-hint-warning>
-        <vcl-hint-error *ngIf="hint.type === 'error'" [error]="hint.error" > {{ hint.message }}</vcl-hint-error>
-      </ng-container>
-    </vcl-form-control-group>
-  </ng-container>
+<form class="vclForm" novalidate #form="ngForm" [formGroup]="model.control" (ngSubmit)="formSubmit.emit(form.value)" >
+  <vcl-jss-form-control *ngFor="let fm of model.models" [model]="fm"></vcl-jss-form-control>
   <ng-content></ng-content>
+  <vcl-jss-form-hints [model]="model"></vcl-jss-form-hints>
 </form>
