jss-form: Migrate to component based jss-form

--- a/demo/app/demos/jss-form/demo.component.html
+++ b/demo/app/demos/jss-form/demo.component.html
@@ -8,12 +8,12 @@
 
 <div class="value">
   <h4>Form</h4>
-  <!-- <pre>status: {{ heroForm.ngForm.status }}</pre>
+  <pre>status: {{ heroForm.ngForm.status }}</pre>
   <pre>valid: {{ heroForm.ngForm.valid }}</pre>
   <pre>dirty: {{ heroForm.ngForm.dirty }}</pre>
   <pre>submitted: {{ heroForm.ngForm.submitted }}</pre>
   <pre>touched: {{ heroForm.ngForm.touched }}</pre>
   <pre>pristine: {{ heroForm.ngForm.pristine }}</pre>
-  <pre>errors: {{ heroForm.ngForm.errors | json }}</pre> -->
+  <pre>errors: {{ heroForm.ngForm.errors | json }}</pre>
   <pre>value: {{ heroForm.ngForm.value | json }}</pre>
 </div>
