Upgrade deps/linter + fix deprecations and linter errors

--- a/demo/app/demos/date-picker/demo.component.html
+++ b/demo/app/demos/date-picker/demo.component.html
@@ -9,7 +9,7 @@
                  [selectRange]="true" 
                  [maxRangeLength]="7" 
                  [minDate]="minDate"
-                 (change)="onChange($event)">
+                 (dateChange)="onChange($event)">
 </vcl-date-picker>
 
 <h3>Minimal Date Picker</h3>
