--- a/demo/app/demos/off-click/demo.component.html
+++ b/demo/app/demos/off-click/demo.component.html
@@ -1,4 +1,4 @@
-<div (offClick)="offClick()" style="border: 2px solid;background-color:red;width:300px;height:300px">
+<div (vclOffClick)="offClick()" style="border: 2px solid;background-color:red;width:300px;height:300px">
   DIV 1
   <br>
   Click somewhere outside to trigger an offClick
