--- a/lib/ng-vcl/src/jss-form/jss-form.component.html
+++ b/lib/ng-vcl/src/jss-form/jss-form.component.html
@@ -1,3 +1,3 @@
 <form class="vclForm" novalidate #form="ngForm" [formGroup]="field.control" (ngSubmit)="formSubmit.emit(form.value)" >
-  <ng-template *ngFor="let portal of portals" [cdkPortalOutlet]="portal"></ng-template>
+  <ng-template [cdkPortalOutlet]="portal"></ng-template>
 </form>
