--- a/demo/app/demos/jss-form/demo.component.html
+++ b/demo/app/demos/jss-form/demo.component.html
@@ -2,18 +2,11 @@
 <vcl-jss-form 
   #heroForm="vclJssForm"
   [schema]="heroSchema" 
-  (formSubmit)="onSubmit($event, heroForm.ngForm.valid)" 
+  (formSubmit)="onSubmit($event)" 
   (formAction)="onAction($event)">
 </vcl-jss-form>
 
-<div class="value">
+<div class="value" *ngIf="state$ | async as formState">
   <h4>Form</h4>
-  <pre>status: {{ heroForm.ngForm.status }}</pre>
-  <pre>valid: {{ heroForm.ngForm.valid }}</pre>
-  <pre>dirty: {{ heroForm.ngForm.dirty }}</pre>
-  <pre>submitted: {{ heroForm.ngForm.submitted }}</pre>
-  <pre>touched: {{ heroForm.ngForm.touched }}</pre>
-  <pre>pristine: {{ heroForm.ngForm.pristine }}</pre>
-  <pre>errors: {{ heroForm.ngForm.errors | json }}</pre>
-  <pre>value: {{ heroForm.ngForm.value | json }}</pre>
+  <pre>{{formState | json}}</pre>
 </div>
