demo: minor change

--- a/demo/app/components/app/app.component.html
+++ b/demo/app/components/app/app.component.html
@@ -6,7 +6,7 @@
         <h1 class="vclAppName">Angular VCL Demo Browser (v{{version}}<span *ngIf="gitBranch"> {{gitBranch}}</span>)</h1>
       </a>
     </div>
-    <div><a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
+    <div class="github"><a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
       <span class="vclIcon fab fa-github fa-3x"></span> </a>
     </div>
   </header>
