select: fix icon

--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -14,7 +14,7 @@
         [disabled]="isDisabled"
         class="vclAppended"
       >
-      <vcl-icon icon="fas:chevron-down"></vcl-icon>
+      <vcl-icon icon="vcl:arrow-down"></vcl-icon>
 </button>
 
 <ng-template>
