--- a/demo/app/demos/slider/demo.component.html
+++ b/demo/app/demos/slider/demo.component.html
@@ -7,7 +7,7 @@ Value: {{value1}}
   [(value)]="value2" 
   [min]="0" 
   [max]="100"
-  [scale]="10">
+  [scale]="11">
 </vcl-slider>
 Value: {{value2}}
 
@@ -41,4 +41,12 @@ Value: {{value4}}
   [max]="7" 
   [disabled]="true" 
   [scale]="['d','i','s','a','b','l', 'e', 'd']">
+</vcl-slider>
+
+<h3>With value outer min/max bounds</h3>
+<vcl-slider 
+  [(value)]="value6" 
+  [min]="10" 
+  [max]="100"
+  [scale]="11">
 </vcl-slider>
