layer: Simplify layer by merging layer-base into layer-ref

--- a/lib/ng-vcl/src/tour/tour.component.html
+++ b/lib/ng-vcl/src/tour/tour.component.html
@@ -1,13 +1,8 @@
 <vcl-popover #popover
   [visible]="visible"
   [target]="target"
-  [originX]="originX"
-  [overlayX]="overlayX"
-  [offsetX]="offsetX"
-  [originY]="originY"
-  [overlayY]="overlayY"
-  [offsetY]="offsetY"
-  [style.z-index]="tour.options?.zIndex">
+  [positions]="positions"
+  >
 
   <div class="vclTourContainer">
 
