--- a/demo/app/demos/popover/demo.component.html
+++ b/demo/app/demos/popover/demo.component.html
@@ -20,10 +20,12 @@
 <vcl-popover
   #popover2
   [target]="target"
-  originX="start"
-  originY="top"
-  overlayX="start"
-  overlayY="bottom">
+  [positions]="[{
+    originX: 'start',
+    originY: 'top',
+    overlayX: 'start',
+    overlayY: 'bottom'
+  }]">
   <div style="width: 300px; height: 50px;">
       Popover is connected to the target<br>
   </div>
