demo: misc fixes

--- a/demo/app/demos/jss-form/demo.component.html
+++ b/demo/app/demos/jss-form/demo.component.html
@@ -2,7 +2,7 @@
 <vcl-jss-form 
   #heroForm="vclJssForm"
   [schema]="heroSchema" 
-  (formSubmit)="onSubmit($event)" 
+  (formSubmit)="onSubmit()" 
   (formAction)="onAction($event)">
 </vcl-jss-form>
 
