--- a/lib/ng-vcl/src/alert/alert.component.html
+++ b/lib/ng-vcl/src/alert/alert.component.html
@@ -37,9 +37,9 @@
         (click)="cancel()"
         >
         <vcl-icogram>
-          <vcl-icon *ngIf="alert.cancelButtonPrepIcon" prepIcon [icon]="(!alert.showConfirmButton && !!loader) ? 'vcl:busy' : alert.cancelButtonPrepIcon"></vcl-icon>
+          <vcl-icon *ngIf="alert.cancelButtonPrepIcon" prepIcon [icon]="alert.cancelButtonPrepIcon"></vcl-icon>
           {{alert.cancelButtonLabel}}
-          <vcl-icon *ngIf="alert.cancelButtonAppIcon" appIcon [icon]="(!alert.showConfirmButton && !!loader) ? null : alert.cancelButtonAppIcon"></vcl-icon>
+          <vcl-icon *ngIf="alert.cancelButtonAppIcon" appIcon [icon]="alert.cancelButtonAppIcon"></vcl-icon>
         </vcl-icogram>
       </button>
 
@@ -52,9 +52,9 @@
         [disabled]="loader"
         >
         <vcl-icogram>
-          <vcl-icon *ngIf="alert.confirmButtonPrepIcon" prepIcon [icon]="loader ? 'vcl:busy' : alert.confirmButtonPrepIcon"></vcl-icon>
+          <vcl-icon *ngIf="alert.confirmButtonPrepIcon" prepIcon [icon]="loader ? null : alert.confirmButtonPrepIcon"></vcl-icon>
           {{alert.confirmButtonLabel}}
-          <vcl-icon *ngIf="alert.confirmButtonAppIcon" appIcon [icon]="loader ? null : alert.confirmButtonAppIcon"></vcl-icon>
+          <vcl-icon *ngIf="alert.confirmButtonAppIcon || loader" appIcon [icon]="loader ? 'vcl:busy' : alert.confirmButtonAppIcon"></vcl-icon>
         </vcl-icogram>
       </button>
     </div>
