--- a/lib/ng-vcl/src/password-input/password-input.component.html
+++ b/lib/ng-vcl/src/password-input/password-input.component.html
@@ -1,5 +1,6 @@
-<ng-content></ng-content>
+<ng-content select="input[vclInput]"></ng-content>
 <button vcl-square-button
+        class="vclAppended"
         type="button"
         [disabled]="disabled"
         (click)="toggle()">
