feat(calendar): add basic calendar/datepicker implementation

--- a/demo/app/demos/icon/icons.component.html
+++ b/demo/app/demos/icon/icons.component.html
@@ -25,3 +25,4 @@
 <vcl-icon icon='vcl:star-empty'></vcl-icon> vcl:star-empty<br>
 <vcl-icon icon='vcl:add'></vcl-icon> vcl:add<br>
 <vcl-icon icon='vcl:remove'></vcl-icon> vcl:remove<br>
+<vcl-icon icon='vcl:calendar'></vcl-icon> vcl:calendar<br>
