--- a/demo/app/demos/icon/icons.component.html
+++ b/demo/app/demos/icon/icons.component.html
@@ -26,3 +26,4 @@
 <vcl-icon icon='vcl:add'></vcl-icon> vcl:add<br>
 <vcl-icon icon='vcl:remove'></vcl-icon> vcl:remove<br>
 <vcl-icon icon='vcl:calendar'></vcl-icon> vcl:calendar<br>
+<vcl-icon icon='vcl:clock'></vcl-icon> vcl:clock<br>
