--- a/lib/ng-vcl/src/calendar/views/year.component.html
+++ b/lib/ng-vcl/src/calendar/views/year.component.html
@@ -5,17 +5,21 @@
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToPrevYear()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
-      <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="changeView.emit('years')">{{calendarYear.label}}</button>
+      <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="onLabelClick()">{{calendarYear.label}}</button>
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToNextYear()">
         <vcl-icon icon="vcl:arrow-right"></vcl-icon>
       </button>
     </div>
   </div>
 </div>
-<div class="vclDGRow" role="row" *ngFor="let group of groupedMonths">
+<div class="vclDGRow" role="row" *ngFor="let group of calendarYear.months">
   <div *ngFor="let month of group"
        class="vclDGCell vclCalItem" 
        [class.vclToday]="month.isCurrentMonth"
+       [class.vclSelected]="!!month.selected"
+       [class.vclSelectedBeg]="month.selected === 'range-start' || month.selected === 'range-start-end'"
+       [class.vclSelectedEnd]="month.selected === 'range-end' || month.selected === 'range-start-end'"
+       [class.vclDisabled]="disabled"
        role="gridcell" 
        tabindex="0" 
        (click)="onSelectMonth(month.date)"
