--- a/demo/app/demos/datepicker/demo.component.html
+++ b/demo/app/demos/datepicker/demo.component.html
@@ -1,4 +1,9 @@
 <h3>Basic datepicker</h3>
 <vcl-datepicker [value]="date" (valueChange)="onChange($event)">
-  <vcl-calendar></vcl-calendar>
 </vcl-datepicker>
+
+<h3>Month Picker</h3>
+<vcl-datepicker [value]="date" (valueChange)="onChange($event)" pick="month"></vcl-datepicker>
+
+<h3>Time Picker</h3>
+<vcl-datepicker [value]="date" (valueChange)="onChange($event)" pick="time"></vcl-datepicker>
