--- a/lib/ng-vcl/src/calendar/views/month.component.html
+++ b/lib/ng-vcl/src/calendar/views/month.component.html
@@ -4,7 +4,7 @@
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToPrevMonth()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
-      <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="changeView.emit('year')">{{calendarMonth.yearAndMonthLabel}}</button>
+      <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="onLabelClick()">{{calendarMonth.yearAndMonthLabel}}</button>
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToNextMonth()">
         <vcl-icon icon="vcl:arrow-right"></vcl-icon>
       </button>
@@ -19,12 +19,12 @@
   <div *ngIf="showWeekOfTheYear" class="vclDGCell vclWeekdayLabel" role="columnheader">{{week.weekOfTheYear}}</div>
   <div *ngFor="let day of week.days" class="vclDGCell vclCalItem vclD0" 
                                 [class.vclSelected]="!!day.selected"
-                                [class.vclSelectedBeg]="day.selected === 'range-start'"
-                                [class.vclSelectedEnd]="day.selected === 'range-end'"
+                                [class.vclSelectedBeg]="day.selected === 'range-start' || day.selected === 'range-start-end'"
+                                [class.vclSelectedEnd]="day.selected === 'range-end' || day.selected === 'range-start-end'"
                                 [class.vclAvailable]="day.available"
                                 [class.vclUnavailable]="day.unavailable"
                                 [class.vclOtherMonth]="!day.inMonth"
-                                [class.vclDisabled]="day.disabled"
+                                [class.vclDisabled]="day.disabled || disabled"
                                 [class.vclToday]="day.isToday"
                                 role="gridcell" 
                                 tabindex="0"
