feat(date-picker): deprecate and rename date-picker module
BREAKING CHANGE: The VCLDatePickerModule module is deprecated and renamed to
VCLDatePickerLegacyModule

--- a/lib/ng-vcl/src/datepicker/datepicker.component.html
+++ b/lib/ng-vcl/src/datepicker/datepicker.component.html
@@ -21,6 +21,6 @@
 </button>
 
 <ng-template>
-  <vcl-calendar [selectionMode]="pick" [value]="value" (valueChange)="onSelect($event)" style="width: 100%"></vcl-calendar>
+  <vcl-calendar [selectionMode]="pick" [value]="value" (valueChange)="onSelect($event)"></vcl-calendar>
 </ng-template>
 
